# harddrive-party

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build-ui.sh  build.rs
.github/workflows/: test.yml
old/: protocol.rs  run.rs
scripts/: generate_stun_servers.sh
shared/: Cargo.toml
shared/src/: announce_address.rs  lib.rs  ui_messages.rs  wire_messages.rs
shared/src/client/: events.rs  mod.rs
src/: api.rs  client.rs  connect.rs  errors.rs  fs.rs  hdp.rs  http.rs  lib.rs  main.rs  mdns.rs  messages.proto  messages.rs  peer.rs  protocol.rs  quic.rs  rpc.rs  run.rs  shares.rs  ui_messages.rs  wire_messages.rs  wishlist.rs  ws.rs
src/connections/: known_peers.rs  mod.rs  quic.rs  rpc.rs  speedometer.rs
src/connections/discovery/: hole_punch.rs  mdns.rs  mod.rs  stun.rs
src/discovery/: capability.rs  handshake.rs  hole_punch.rs  mdns.rs  mod.rs  mqtt.rs  stun.rs  topic.rs
src/discovery/waku/: mod.rs  waku_message.proto
src/ui_server/: api.rs  client.rs  mod.rs  ws.rs
tests/: _duplex.rs  _testdata.rs  basic.rs  protocol.rs  rpc.rs  run.rs
tests_/: run.rs
web-ui/: Cargo.toml  README.md  Trunk.toml  index.html  shell.nix  style.css
web-ui/src/: file.rs  hdp.rs  lib.rs  main.rs  mock.rs  peer.rs  requests.rs  search.rs  shares.rs  topics.rs  transfers.rs  uploads.rs  ws.rs
web-ui/src/components/: announce_address.rs  header.rs  mod.rs
web-ui/style/: output.css
