[workspace]
members = [".", "shared"]
exclude = ["web-ui"]

[package]
name = "harddrive-party"
version = "0.0.1"
authors = ["peg <peg@magmacollective.org>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Share files peer-to-peer"
homepage = "https://gitlab.com/pegpeg/harddrive-party"
repository = "https://gitlab.com/pegpeg/harddrive-party"
keywords = ["peer-to-peer", "filesharing", "p2p"]

[dependencies]
harddrive-party-shared = { version = "0.0.1", path = "shared" }
futures = "0.3.25"
async-walkdir = "0.2.0"
sled = "0.34.7"
anyhow = "1.0.28"
thiserror = "1.0.37"
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8.5"
quinn = "0.9.3"
quinn-udp = "0.3.2"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
rustls = { version = "0.20.8", features = ["dangerous_configuration", "quic"] }
rcgen = "0.10.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = "0.18.0"
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
mdns-sd = "0.5.10"
local-ip-address = "0.5.1"
cryptoxide = { version = "0.4.4", default-features = false, features = [
  "blake2",
  "poly1305",
  "chacha",
] }
hex = "0.4.3"
key-to-animal = { git = "https://gitlab.com/pegpeg/key-to-animal" }
ring = "0.16.20"
speedometer = "0.2.2"
stunclient = "0.4.1"
lru = "0.10.0"
async-stream = "0.3.4"
warp = "0.3.5"
warp-embed = "0.4.0"
rust-embed = "6"
protobuf = "3.2.0"
mqtt-protocol = { version = "0.12.0", features = ["tokio"] }

[dev-dependencies]
sluice = "0.5.5"
tempfile = "3.3.0"
