[workspace]
members = [".", "shared"]
exclude = ["web-ui"]

[package]
name = "harddrive-party"
version = "0.0.1"
authors = ["peg <ameba23@systemli.org>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Share files peer-to-peer"
homepage = "https://gitlab.com/pegpeg/harddrive-party"
repository = "https://gitlab.com/pegpeg/harddrive-party"
keywords = ["peer-to-peer", "filesharing", "file-sharing", "p2p"]
include = [
    "src/",
    "Cargo.toml",
    "dist/"
]

[dependencies]
harddrive-party-shared = { version = "0.0.1", path = "shared" }
futures = "0.3.25"
async-walkdir = "0.2.0"
sled = "0.34.7"
anyhow = "1.0.28"
thiserror = "1.0.37"
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8.5"
quinn = "0.10.2"
quinn-udp = "0.4.1"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
rustls = { version = "0.21.10", features = ["dangerous_configuration", "quic"] }
rcgen = "0.10.0"
bincode = "1.3.3"
tokio-tungstenite = "0.18.0"
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
mdns-sd = "0.5.10"
local-ip-address = "0.5.1"
cryptoxide = { version = "0.4.4", default-features = false, features = [
  "blake2",
  "poly1305",
  "chacha",
] }
hex = "0.4.3"
key-to-animal = "0.0.1"
ring = "0.16.20"
speedometer = "0.2.2"
stunclient = "0.4.1"
lru = "0.10.0"
async-stream = "0.3.4"
base64 = "0.22.1"
axum = { version = "0.8.4", features = ["ws"] }
tower-http = { version = "0.6.4", features = ["fs"] }
rust-embed = "8.7.2"
mime_guess = "2.0.5"

[dev-dependencies]
tempfile = "3.3.0"

