[package]
name = "harddrive-party-shared"
description = "Shared types for harddrive-party and harddrive-party-web-ui"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["peg <ameba23@systemli.org>"]
homepage = "https://gitlab.com/pegpeg/harddrive-party"
repository = "https://gitlab.com/pegpeg/harddrive-party"

[dependencies]
thiserror = "1.0.37"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.25"
bincode = "1.3.3"
reqwest = { version = "0.12.15", default-features = false, features = ["stream"] }
bytes= "1.10.1"
tokio-tungstenite = { version="0.18.0", optional=true }
tokio = { version = "1.24.2", optional=true }
base64 = "0.22.1"

[features]
default = ["native"]
native = ["tokio-tungstenite", "tokio"]

