[package]
name = "harddrive-party-web-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.3.0", features = ["stable", "csr"]}
reqwasm = "0.5.0"
futures = "0.3.26"
wasm-bindgen-futures = "0.4.34"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"]}
thiserror = "1.0.38"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
pretty-bytes-rust = "0.1.0"
leptos_router = { version = "0.3.0", features = ["stable", "csr"]}
web-sys = { version = "0.3", features = ["Document", "Location"]}

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"

