[workspace]

[package]
name = "harddrive-party-web-ui"
description = "Web UI for harddrive-party"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["peg <peg@magmacollective.org>"]
homepage = "https://gitlab.com/pegpeg/harddrive-party"
repository = "https://gitlab.com/pegpeg/harddrive-party"

[dependencies]
harddrive-party-shared = { version = "0.0.1", path = "../shared" }
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
reqwasm = "0.5.0"
futures = "0.3.26"
wasm-bindgen-futures = "0.4.34"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.38"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
pretty-bytes-rust = "0.1.0"
urlencoding = "2.1.2"
anyhow = "1.0.28"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
